--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <version>6.0.0</version>
 <!--            <scope>test</scope>-->
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
